components/networking/metallb/metallb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
